syntax = "proto3";

package auth;

service Auth{
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Register(RegisterRequest) returns (RegisterResponse);
}

message LoginRequest {
    oneof loginData {
        string username = 1;
        string email = 2;
    }
    string password = 3;
}

message LoginResponse {
    string status = 1;
    string token = 2;
    string idsession = 3;
}

message RegisterRequest {
    string firstname = 1;
    string lastname = 2;
    string birthdate = 3;
    string username = 4;
    string email = 5;
    string password = 6;
}

message RegisterResponse {
    string status = 1;
}